fixed quickview model spill over issue.

--- a/themes/child_AngarTheme/assets/css/custom.css
+++ b/themes/child_AngarTheme/assets/css/custom.css
@@ -314,3 +314,6 @@ float:right;
     width: auto;
     float: left;
 }
+.quickview .modal-body {
+    min-height: 27.75rem;
+}
